--- a/register.bib
+++ b/register.bib
@@ -519,3 +519,12 @@ DOI = {10.3390/s16010097}
   howpublished = {\url{https://www.faa.gov/newsroom/small-unmanned-aircraft-systems-uas-regulations-part-107}},
   note         = {Accessed: 2024-11-22}
 }
+
+@inproceedings{bala2025,
+author = {Bala, Mihir and Chanana, Aditya and Chen, Xiangliang and Dong, Qifei and Eiszler, Thomas and Xu, Jingao and Pillai, Padmanabhan and Satyanarayanan, Mahadev},
+title = {The OODA Loop of Cloudlet-based Autonomous Drones},
+year = {2025},
+booktitle = {Proceedings of the Ninth ACM/IEEE Symposium on Edge Computing},
+keywords = {edge computing, drones, computer vision, machine learning, wireless networks, autonomous robotics},
+series = {To appear in SEC '24}
+}
